added some content to the website as well as some images

--- a/website/default.css
+++ b/website/default.css
@@ -241,7 +241,7 @@ input, textarea, select {
 	margin: 0;
 	padding-top: 15px;
 	line-height: normal;
-	color: #28313A; 
+	color: #0F0F0F0F; 
 }
 
 .post .meta .byline {
